--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ p {
 	border-radius: 5px;
 	color: #fff;
 	font-size: 1em;
+	font-weight: 700;
 	padding: 15px 30px;
 	margin-right: 20px;
 	letter-spacing: 1px;
